JB summary, brazil section and footer SCSS

--- a/home.html
+++ b/home.html
@@ -65,9 +65,23 @@
             <!-- LEFTH START -->
             <section class="lefth">
                 <section class="summary">
+                    <h3>About Us</h3>
+                    <p>
+                        Travel to one of the three largest tourist countries in the world with our TourGuide company, enjoy one of the beautiful Brazilian natures, see the wonderful Korean theaters or visit the famous cathedrals of Colombia. All this in a cheap, fast and well-organized way, without any further confusion, we are here to help you with all your travel documents and offer you the best price on the market. come be our VIP client and have access to the best travel combos including well located hotels and polyglot tourist guides.
+                    </p>
+                </section>
+                <section class="brazil">
+                    <aside>
+                        <h3>Brazil</h3>
+                    </aside>
+                    <p>
+                        A country of continental dimensions, Brazil is the largest country in South America, with an area of over 8.5 million km². It is also the country that is home to the greatest diversity of fauna and flora in the world, containing 6 different types of biomes throughout its territory. With a very welcoming and hospitable people.
+                    </p>
+                </section>
+                <section class="colombia">
 
                 </section>
-                <section class="faq">
+                <section class="korea">
 
                 </section>
                 <section class="contact">
@@ -75,39 +89,6 @@
                 </section>
             </section>
             <!-- LEFTH END -->
-            <!-- RIGTH START -->
-            <section class="rigth">
-                <section class="links">
-                    <aside id="brasil">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h5></h5>
-                                <a href=""></a>
-                            </figcaption>
-                        </figure>
-                    </aside>
-                    <aside id="korea">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h5></h5>
-                                <a href=""></a>
-                            </figcaption>
-                        </figure>
-                    </aside>
-                    <aside id="colombia">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h5></h5>
-                                <a href=""></a>
-                            </figcaption>
-                        </figure>
-                    </aside>
-                </section>
-            </section>
-            <!-- RIGTH END -->
         </main>
         <!-- MAIN END -->
         <!-- FOOTER START -->
