JB HTML updated and summary SCSS mobile end

--- a/home.html
+++ b/home.html
@@ -63,12 +63,14 @@
         <!-- MAIN START -->
         <main>
             <!-- LEFTH START -->
-            <section class="lefth">
+            <section>
                 <section class="summary">
                     <h3>About Us</h3>
-                    <p>
-                        Travel to one of the three largest tourist countries in the world with our TourGuide company, enjoy one of the beautiful Brazilian natures, see the wonderful Korean theaters or visit the famous cathedrals of Colombia. All this in a cheap, fast and well-organized way, without any further confusion, we are here to help you with all your travel documents and offer you the best price on the market. come be our VIP client and have access to the best travel combos including well located hotels and polyglot tourist guides.
-                    </p>
+                    <article>
+                        <p>
+                            Travel to one of the three largest tourist countries in the world with our TourGuide company, enjoy one of the beautiful Brazilian natures, see the wonderful Korean theaters or visit the famous cathedrals of Colombia. All this in a cheap, fast and well-organized way, without any further confusion, we are here to help you with all your travel documents and offer you the best price on the market. come be our VIP client and have access to the best travel combos including well located hotels and polyglot tourist guides.
+                        </p>
+                    </article>
                 </section>
                 <section class="brazil">
                     <aside>
