JB HTML updated and brazil SCSS end

--- a/home.html
+++ b/home.html
@@ -73,12 +73,16 @@
                     </article>
                 </section>
                 <section class="brazil">
-                    <aside>
-                        <h3>Brazil</h3>
-                    </aside>
-                    <p>
-                        A country of continental dimensions, Brazil is the largest country in South America, with an area of over 8.5 million km². It is also the country that is home to the greatest diversity of fauna and flora in the world, containing 6 different types of biomes throughout its territory. With a very welcoming and hospitable people.
-                    </p>
+                    <section>
+                        <aside>
+                            <h3>Brazil</h3>
+                        </aside>
+                    </section>
+                    <article>
+                        <p>
+                            A country of continental dimensions, Brazil is the largest country in South America, with an area of over 8.5 million km². It is also the country that is home to the greatest diversity of fauna and flora in the world, containing 6 different types of biomes throughout its territory. With a very welcoming and hospitable people.
+                        </p>
+                    </article>
                 </section>
                 <section class="colombia">
 
