Mobile: header css is done

--- a/korea.html
+++ b/korea.html
@@ -282,6 +282,7 @@
                 </article>
                 <section>
                     <article class="kFood">
+                        <h3>FOOD</h3>
                         <figure>
                             <img
                                 src="./img/korea/tteokbokki.jpg"
@@ -346,6 +347,7 @@
                         </figure>
                     </article>
                     <article class="kAlcohol">
+                        <h3>ALCOHOL</h3>
                         <figure>
                             <img src="./img/korea/soju.jpg" alt="soju-img" />
                             <figcaption>
@@ -483,25 +485,32 @@
                             </figcaption>
                         </figure>
                     </aside>
-                    <figure>
-                        <img src="./img/korea/winter.jpeg" alt="winter-img" />
-                        <figcaption>
-                            <ul>
-                                <li>
-                                    <i class="fa-solid fa-flower"></i>
-                                    <p>Winter</p>
-                                </li>
-                                <li>
-                                    <i class="fa-solid fa-location-dot"></i>
-                                    <address>
-                                        483-32, Daegwallyeongmaru-gil,
-                                        Daegwallyeong-myeon, Pyeongchang-gun,
-                                        Gangwon-do, Republic of Korea
-                                    </address>
-                                </li>
-                            </ul>
-                        </figcaption>
-                    </figure>
+                    <aside>
+                        <h3>Winter</h3>
+                        <figure>
+                            <img
+                                src="./img/korea/winter.jpeg"
+                                alt="winter-img"
+                            />
+                            <figcaption>
+                                <ul>
+                                    <li>
+                                        <i class="fa-solid fa-flower"></i>
+                                        <p>Winter</p>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        <address>
+                                            483-32, Daegwallyeongmaru-gil,
+                                            Daegwallyeong-myeon,
+                                            Pyeongchang-gun, Gangwon-do,
+                                            Republic of Korea
+                                        </address>
+                                    </li>
+                                </ul>
+                            </figcaption>
+                        </figure>
+                    </aside>
                 </section>
             </section>
         </main>
