JB tablet SCSS end. mobile updated

--- a/brazil.html
+++ b/brazil.html
@@ -114,7 +114,7 @@
                     <figure>
                         <img src="/img/brazil/ecotourism.jpeg" alt="pic-04">
                         <figcaption>
-                            <h4>ecotourism</h4>
+                            <h4>Ecotourism</h4>
                             <p>
                                 Brazil offers many opportunities for outdoor activities, including hiking trails, bird and wildlife watching, rafting, canoeing and much more. Popular destinations for ecotourism include the Amazon rainforest, the Pantanal and Chapada Diamantina.
                             </p>
@@ -132,11 +132,12 @@
                     <figure>
                         <img src="/img/brazil/beaches.jpeg" alt="pic-06">
                         <figcaption>
-                            <h4>beaches</h4>
+                            <h4>Beaches</h4>
                             <p>
                                 Brazil is famous for its beautiful beaches, especially the beaches of Copacabana and Ipanema, in Rio de Janeiro, and the beaches of Porto de Galinhas and Jericoacoara, in the Northeast of the country.
                             </p>
                         </figcaption>
+                    </figure>
                 </article>
             </section>
             <!-- SECTION TOURIST ACTIVITIES END -->
@@ -222,7 +223,7 @@
                     </figure>
                     <figure>
                         <h5>CERRADO</h5>
-                        <img src="/img/brazil/cerrado.jpeg"alt="pic-15">
+                        <img src="/img/brazil/cerrado.jpeg" alt="pic-15">
                         <figcaption>
                             <p>
                                 Holds 5% of the planet's biodiversity and is recognized as the richest savannah in the world
