--- a/home.html
+++ b/home.html
@@ -1,77 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-        <title>Tour Guide</title>
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-        <!-- NAV -->
-        <nav>
-            <ul>
-                <li><a href="#intro">Welcome</a></li>
-                <li><a href="#summaryBrazil">About Brazil</a></li>
-                <li><a href="#summaryColombia">About Colombia</a></li>
-                <li><a href="#summaryKorea">About Korea</a></li>
-            </ul>
-            <aside>
-                <i class="fa-solid fa-earth-americas"></i>
-            </aside>
-            <ul>
-                <li><a href="home.html">HOME</a></li>
-                <li><a href="brazil.html">BRAZIL</a></li>
-                <li><a href="colombia.html">COLOMBIA</a></li>
-                <li><a href="korea.html">KOREA</a></li>
-            </ul>
-            <details>
-                <summary class="fa-solid fa-bars"></summary>
-                <article>
-                    <ul>
-                        <li><a href="#intro">Welcome</a></li>
-                        <li><a href="#summaryBrazil">About Brazil</a></li>
-                        <li><a href="#summaryColombia">About Colombia</a></li>
-                        <li><a href="#summaryKorea">About Korea</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="home.html">HOME</a></li>
-                        <li><a href="brazil.html">BRAZIL</a></li>
-                        <li><a href="colombia.html">COLOMBIA</a></li>
-                        <li><a href="korea.html">KOREA</a></li>
-                    </ul>
-                </article>
-            </details>
-        </nav>
-        <!--Header-->
-        <header>
-            <video src="/video/production ID_4133012.mp4" muted loop autoplay></video>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <title>Tour Guide</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+    <!-- NAV -->
+    <nav>
+        <ul>
+            <li><a href="#intro">Welcome</a></li>
+            <li><a href="#summaryBrazil">About Brazil</a></li>
+            <li><a href="#summaryColombia">About Colombia</a></li>
+            <li><a href="#summaryKorea">About Korea</a></li>
+        </ul>
+        <aside>
+            <i class="fa-solid fa-earth-americas"></i>
+        </aside>
+        <ul>
+            <li><a href="home.html">HOME</a></li>
+            <li><a href="brazil.html">BRAZIL</a></li>
+            <li><a href="colombia.html">COLOMBIA</a></li>
+            <li><a href="korea.html">KOREA</a></li>
+        </ul>
+        <details>
+            <summary class="fa-solid fa-bars"></summary>
+            <article>
+                <ul>
+                    <li><a href="#intro">Welcome</a></li>
+                    <li><a href="#summaryBrazil">About Brazil</a></li>
+                    <li><a href="#summaryColombia">About Colombia</a></li>
+                    <li><a href="#summaryKorea">About Korea</a></li>
+                </ul>
+                <ul>
+                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="brazil.html">BRAZIL</a></li>
+                    <li><a href="colombia.html">COLOMBIA</a></li>
+                    <li><a href="korea.html">KOREA</a></li>
+                </ul>
+            </article>
+        </details>
+    </nav>
+    <!--Header-->
+    <header>
+        <video src="/video/production ID_4133012.mp4" muted loop autoplay></video>
+        <section>
             <article>
                 <h1>Tour Guide</h1>
                 <h2>Tour 3 countries with us!</h2>
             </article>
-            <section>
-                <form action="#" method="post">
-                    <input type="search" id="search" name="search" />
-                    <input type="submit" value="&#128269;" />
-                </form>
-            </section>
+            <form action="#" method="post">
+                <input type="search" id="search" name="search" placeholder="Search" />
+                <input type="submit" value="Go" />
+            </form>
             <a href="#">Join us!</a>
-        </header>
-        <!--Header end-->
-        <!-- FOOTER START -->
-        <footer>
-            <section>
-                <ul>
-                    <li><a href="#" class="fa-brands fa-twitter"></a></li>
-                    <li><a href="#" class="fa-brands fa-facebook-f"></a></li>
-                    <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
-                    <li><a href="#" class="fa-brands fa-instagram"></a></li>
-                </ul>
-                <p>Copyright &copy; 2035 Tour Guide</p>
-            </section>
-        </footer>
-        <!-- FOOTER END -->
-    </body>
+        </section>
+    </header>
+    <!--Header end-->
+    <!-- FOOTER START -->
+    <footer>
+        <section>
+            <ul>
+                <li><a href="#" class="fa-brands fa-twitter"></a></li>
+                <li><a href="#" class="fa-brands fa-facebook-f"></a></li>
+                <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                <li><a href="#" class="fa-brands fa-instagram"></a></li>
+            </ul>
+            <p>Copyright &copy; 2035 Tour Guide</p>
+        </section>
+    </footer>
+    <!-- FOOTER END -->
+</body>
+
 </html>
