Korea html is done

--- a/korea.html
+++ b/korea.html
@@ -60,6 +60,7 @@
         </header>
         <!-- MAIN -->
         <main class="kMain">
+            <!-- INTRO -->
             <section class="kIntro" id="kIntro">
                 <article>
                     <h3>Welcome to South Korea!</h3>
@@ -95,6 +96,7 @@
                     </figure>
                 </section>
             </section>
+            <!-- SEOUL -->
             <section class="kSeoul" id="kSeoul">
                 <article>
                     <h3>Travel to SEOUL!</h3>
@@ -200,6 +202,7 @@
                     </aside>
                 </section>
             </section>
+            <!-- JEJU -->
             <section class="kJeju" id="kJeju">
                 <article>
                     <h3>JEJU ISLAND</h3>
@@ -275,12 +278,14 @@
                     </article>
                 </section>
             </section>
+            <!-- RECOMMENDATION -->
             <section class="kRecommendation" id="kRecommendation">
                 <article>
                     <h3>MUST EAT AND DRINK</h3>
                     <h4>Food and Alcohol Recommendations that you must try!</h4>
                 </article>
                 <section>
+                    <!-- FOOD -->
                     <article class="kFood">
                         <h3>FOOD</h3>
                         <figure>
@@ -346,6 +351,7 @@
                             </figcaption>
                         </figure>
                     </article>
+                    <!-- ALCOHOL -->
                     <article class="kAlcohol">
                         <h3>ALCOHOL</h3>
                         <figure>
@@ -403,6 +409,7 @@
                     </article>
                 </section>
             </section>
+            <!-- SEASON -->
             <section class="kSeason" id="kSeason">
                 <article>
                     <h3>Four Seasons</h3>
@@ -424,7 +431,7 @@
                             <figcaption>
                                 <ul>
                                     <li>
-                                        <i class="fa-solid fa-flower"></i>
+                                        <i class="fa-solid fa-seedling"></i>
                                         <p>Jinhae Cherry Blossom Festival</p>
                                     </li>
                                     <li>
@@ -449,7 +456,7 @@
                             <figcaption>
                                 <ul>
                                     <li>
-                                        <i class="fa-regular fa-water"></i>
+                                        <i class="fa-solid fa-water"></i>
                                         <p>Yangyang Ingu Beach</p>
                                     </li>
                                     <li>
@@ -470,8 +477,10 @@
                             <figcaption>
                                 <ul>
                                     <li>
-                                        <i class="fa-solid fa-leaf-maple"></i>
-                                        <p>Fall</p>
+                                        <i
+                                            class="fa-brands fa-canadian-maple-leaf"
+                                        ></i>
+                                        <p>Hwadam Forest</p>
                                     </li>
                                     <li>
                                         <i class="fa-solid fa-location-dot"></i>
@@ -495,8 +504,8 @@
                             <figcaption>
                                 <ul>
                                     <li>
-                                        <i class="fa-solid fa-flower"></i>
-                                        <p>Winter</p>
+                                        <i class="fa-solid fa-mitten"></i>
+                                        <p>Daegwallyeong Sheep Ranch</p>
                                     </li>
                                     <li>
                                         <i class="fa-solid fa-location-dot"></i>
