changes made to tablet version

--- a/colombia.html
+++ b/colombia.html
@@ -64,7 +64,11 @@
     <!--Header end-->
     <main class="cmain">
         <section class="quote">
-
+            <article>
+                <section>
+                    <h6>Lorem ipsum dolor sit amet.</h6>
+                </section>
+            </article>
         </section>
         <section class="cleft" id="cleft">
             <section class="place" id="place">
@@ -73,6 +77,7 @@
                         Touristic Places
                     </h2>
                  </article>
+                 <section class="gallery">
                  <section class="place1">
                     <aside>
                         Lost City
@@ -117,6 +122,7 @@
                         </figcaption>
                     </figure>
                  </section>
+                </section>
             </section>
             <section class="festival" id="festival">
                 <aside>
