korea html fixed

--- a/index.html
+++ b/index.html
@@ -122,16 +122,28 @@
                         </aside>
                     </section>
                     <article>
-                        <p>
-                            Korea is a country located in the south of East
-                            Asia. Since it has all four seasons, spring, summer,
-                            fall, and winter, there are many activities to eat
-                            and enjoy at any time. Also, because the distance
-                            between regions is not that far, it is convenient to
-                            travel to other places. If you want to experience
-                            new culture and food, travel to Korea right away!
-                        </p>
-                        <a href="korea.html">Go to Korea!</a>
+                        <figure>
+                            <img
+                                src="./img/home/korea-flag.jpg"
+                                alt="korea-flag-img"
+                            />
+                            <figcaption>
+                                <p>
+                                    Korea is a country located in the south of
+                                    East Asia. Since it has all four seasons,
+                                    spring, summer, fall, and winter, there are
+                                    many activities to eat and enjoy at any
+                                    time. Also, because the distance between
+                                    regions is not that far, it is convenient to
+                                    travel to other places. If you want to
+                                    experience new culture and food, travel to
+                                    Korea right away!
+                                </p>
+                                <a href="korea.html" target="_blank"
+                                    >Go to Korea!</a
+                                >
+                            </figcaption>
+                        </figure>
                     </article>
                 </section>
                 <section class="contact"></section>
