html nav id fixed

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <!-- NAV -->
         <nav>
             <ul>
-                <li><a href="#intro">Welcome</a></li>
-                <li><a href="#summaryBrazil">About Brazil</a></li>
-                <li><a href="#summaryColombia">About Colombia</a></li>
-                <li><a href="#summaryKorea">About Korea</a></li>
+                <li><a href="#summary">Welcome</a></li>
+                <li><a href="#brazil">About Brazil</a></li>
+                <li><a href="#colombia">About Colombia</a></li>
+                <li><a href="#korea">About Korea</a></li>
             </ul>
             <aside>
                 <i class="fa-solid fa-earth-americas"></i>
@@ -34,10 +34,10 @@
                 <summary class="fa-solid fa-bars"></summary>
                 <article>
                     <ul>
-                        <li><a href="#intro">Welcome</a></li>
-                        <li><a href="#summaryBrazil">About Brazil</a></li>
-                        <li><a href="#summaryColombia">About Colombia</a></li>
-                        <li><a href="#summaryKorea">About Korea</a></li>
+                        <li><a href="#summary">Welcome</a></li>
+                        <li><a href="#brazil">About Brazil</a></li>
+                        <li><a href="#colombia">About Colombia</a></li>
+                        <li><a href="#korea">About Korea</a></li>
                     </ul>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
@@ -78,7 +78,7 @@
         <main>
             <!-- LEFTH START -->
             <section>
-                <section class="summary">
+                <section class="summary" id="summary">
                     <h3>About Us</h3>
                     <article>
                         <p>
@@ -96,7 +96,7 @@
                         </p>
                     </article>
                 </section>
-                <section class="brazil">
+                <section class="brazil" id="brazil">
                     <section>
                         <aside>
                             <h3>Brazil</h3>
@@ -114,8 +114,8 @@
                         </p>
                     </article>
                 </section>
-                <section class="colombia"></section>
-                <section class="korea">
+                <section class="colombia" id="colombia"></section>
+                <section class="korea" id="korea">
                     <section>
                         <aside>
                             <h3>Korea</h3>
