header scss fixed

--- a/home.html
+++ b/home.html
@@ -51,14 +51,15 @@
         <video src="/video/production ID_4133012.mp4" muted loop autoplay></video>
         <section>
             <article>
-                <h1>Tour Guide</h1>
-                <h2>Tour 3 countries with us!</h2>
+                <h1>Design</h1>
+                <h2>Your Perfect Vacation</h2>
+                <h3><strong>ENJOY UNIQUE</strong> and Safe travel Experience</h3>
             </article>
             <form action="#" method="post">
                 <input type="search" id="search" name="search" placeholder="Search">
                 <input type="submit" value="Go">
             </form>
-            <a href="#">Join us!</a>
+            <a href="#">MORE</a>
         </section>
     </header>
     <!--Header end-->
