Korea header & Final scss is done

--- a/korea.html
+++ b/korea.html
@@ -52,10 +52,24 @@
         <!-- HEADER -->
         <header class="kHeader">
             <section>
-                <h1>KOREA</h1>
-                <h2>
-                    If you want a variety of food and attractions, visit here!
-                </h2>
+                <article>
+                    <h2>KOREA</h2>
+                    <h3>
+                        If you want
+                        <strong>a variety of food and attractions,</strong>
+                        visit here!
+                    </h3>
+                </article>
+                <form action="#" method="post">
+                    <input
+                        type="search"
+                        id="search"
+                        name="search"
+                        placeholder="Search"
+                    />
+                    <input type="submit" value="Go" />
+                </form>
+                <a href="#">MORE</a>
             </section>
         </header>
         <!-- MAIN -->
