JB brazil page HTML and SCSS end

--- a/brazil.html
+++ b/brazil.html
@@ -48,12 +48,27 @@
     </nav>
     <!-- NAV END -->
     <!-- HEADER START -->
-    <header>
-        <article>
-            <h1>BRAZIL</h1>
-            <h2>A Tropical Country</h2>
-        </article>
-        <a href="#">more info</a>
+    <header class="BHeader">
+        <section>
+            <article>
+                <h2>BRAZIL</h2>
+                <h3>
+                    If you want
+                    <strong>a warm and hospitable country</strong>
+                    visit here!
+                </h3>
+            </article>
+            <form action="#" method="post">
+                <input
+                    type="search"
+                    id="search"
+                    name="search"
+                    placeholder="Search"
+                />
+                <input type="submit" value="Go" />
+            </form>
+            <a href="#">MORE</a>
+        </section>
     </header>
     <!-- HEADER END -->
     <!-- MAIN START -->
