contact html and mobile done

--- a/index.html
+++ b/index.html
@@ -147,7 +147,44 @@
                         </figure>
                     </article>
                 </section>
-                <section class="contact"></section>
+                <section class="contact">
+                    <article>
+                        <i class="fa-solid fa-envelope-open-text"></i>
+                    </article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati minus numquam ex deleniti esse vel?</p>
+                    <form class="contform" action="#" method="post">
+                        <article>
+                            <input type="text" id="fName" name="fName" placeholder="First Name">
+                            <input type="text" id="lName" name="lName" placeholder="Last Name">
+                            <input type="email" id="email" name="email" placeholder="Your email">
+                            <select name="country" id="country">
+                                <option value="" disabled selected>Select Your Country</option>
+                                <option value="col">Colombia</option>
+                                <option value="br">Brazil</option>
+                                <option value="kr">South Korea</option>
+                                <option value="usa">United States</option>
+                                <option value="ukraine">Ukraine</option>
+                                <option value="ger">Germany</option>
+                                <option value="can">Canada</option>
+                                <option value="ita">Italy</option>
+                                <option value="fr">France</option>
+                                <option value="rome">Rome</option>
+                            </select>
+                            <input type="number" name="age" id="age" placeholder="Age">
+                            <select name="profile" id="profile">
+                                <option value="" disabled selected>Select Your Profile</option>
+                                <option value="student">Student</option>
+                                <option value="company">Company</option>
+                                <option value="personal">Personal Use</option>
+                            </select>
+                        </article>
+                        <aside>
+                            <label for="conditions">I Acknowledge That I Have Read And Understand The <a href="#">Terms</a> And <a href="">Conditions</a> </label>
+                            <input type="checkbox" id="conditions" name="conditions">
+                            <input type="submit" value="Subscribe!">
+                        </aside>
+                    </form>
+                </section>
             </section>
             <!-- LEFTH END -->
         </main>
