colombia sections/other fixes done

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                             throughout its territory. With a very welcoming and
                             hospitable people.
                         </p>
+                        <a href="brazil.html">Go to Brazil!</a>
                     </article>
                 </section>
-                <section class="colombia" id="colombia"></section>
                 <section class="korea" id="korea">
                     <section>
                         <aside>
@@ -145,6 +145,19 @@
                                 >
                             </figcaption>
                         </figure>
+                    </article>
+                </section>
+                <section class="colombia" id="colombia">
+                    <section>
+                        <aside>
+                            <h3>Colombia</h3>
+                        </aside>
+                    </section>
+                    <article>
+                        <p>
+                            On your trip to Colombia, you can enjoy stunning cities like Bogotá, Medellín, Cali or Cartagena, delight in the colorful Barranquilla Carnival and soak up the natural beauty of the Sierra Nevada de Santa Marta mountain range and Tayrona National Park. To make the most of your stay, let's get familiar with some of the practicalities that will help you navigate the country and its culture.
+                        </p>
+                        <a href="colombia.html">Go to Colombia!</a>
                     </article>
                 </section>
                 <section class="contact">
