progress made on mobile version, footer, nav and header added to the page

--- a/colombia.html
+++ b/colombia.html
@@ -45,21 +45,31 @@
             </article>
         </details>
     </nav>
-    <!--Header-->
-    <header>
-        <video src="/video/production ID_4133012.mp4" autoplay loop muted></video>
-        <article>
-            <h1>COLOMBIA</h1>
-            <h2>some insightful text</h2>
-            <h3>some other text</h3>
-        </article>
+     <!--Header-->
+     <header>
+        <video
+            src="/video/production ID_4133012.mp4"
+            muted
+            loop
+            autoplay
+        ></video>
         <section>
+            <article>
+                <h1>Design</h1>
+                <h2>Your Perfect Vacation</h2>
+                <h3><strong>ENJOY UNIQUE</strong> and Safe travel Experience</h3>
+            </article>
             <form action="#" method="post">
-                <input type="search" id="search" name="search">
-                <input type="submit" value="&#128269;">
+                <input
+                    type="search"
+                    id="search"
+                    name="search"
+                    placeholder="Search"
+                />
+                <input type="submit" value="Go" />
             </form>
+            <a href="#">MORE</a>
         </section>
-        <a href="#">more info</a>
     </header>
     <!--Header end-->
     <main class="cmain">
@@ -80,7 +90,7 @@
                  <section class="gallery">
                  <section class="place1">
                     <aside>
-                        Lost City
+                        <p>Lost City</p>
                     </aside>
                     <figure>
                         <img src="/img/colombia/perdida.jpg" alt="pciture-1">
@@ -91,7 +101,7 @@
                  </section>
                  <section class="place2">
                     <aside>
-                        Santuario de las Lajas
+                        <p>Santuario de las Lajas</p>
                     </aside>
                     <figure>
                         <img src="/img/colombia/santuario.jpg" alt="picture-2">
@@ -102,7 +112,7 @@
                  </section>
                  <section class="place3">
                     <aside>
-                        Catedra de Sal
+                        <p>Catedra de Sal</p>
                     </aside>
                     <figure>
                         <img src="/img/colombia/catedra.jpeg" alt="picture-3">
@@ -113,7 +123,7 @@
                  </section>
                  <section class="place4">
                     <aside>
-                        Caño Cristales
+                        <p>Caño Cristales</p>
                     </aside>
                     <figure>
                         <img src="/img/colombia/cristales.jpg" alt="picture-4">
@@ -132,7 +142,7 @@
                         </h2>
                     </article>
                     <section class="festList">
-                        <figure>
+                        <figure class="fest1">
                             <img src="/img/colombia/carnival-mask.png" alt="fest-1">
                             <figcaption>
                                 <h3>Lorem, ipsum.</h3>
@@ -140,7 +150,7 @@
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
                             </figcaption>
                         </figure>
-                        <figure>
+                        <figure class="fest2">
                             <img src="/img/colombia/mexican-hat.png" alt="fest-2">
                             <figcaption>
                                 <h3>Lorem, ipsum.</h3>
@@ -148,7 +158,7 @@
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
                             </figcaption>
                         </figure>
-                        <figure>
+                        <figure class="fest3">
                             <img src="/img/colombia/parade.png" alt="fest-3">
                             <figcaption>
                                 <h3>Lorem, ipsum.</h3>
@@ -205,7 +215,7 @@
                             </figure>
                         </aside>
                     </section>
-                    <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                    <a href="#">Read More</i></a>
                 </aside>
             </section>
         </section>
