--- a/colombia.html
+++ b/colombia.html
@@ -47,12 +47,6 @@
     </nav>
      <!--Header-->
      <header>
-        <video
-            src="/video/production ID_4133012.mp4"
-            muted
-            loop
-            autoplay
-        ></video>
         <section>
             <article>
                 <h1>Design</h1>
@@ -76,7 +70,7 @@
         <section class="quote">
             <article>
                 <section>
-                    <h6>Lorem ipsum dolor sit amet.</h6>
+                    <h6>Gastronomic, Cultural and Musical Diversity</h6>
                 </section>
             </article>
         </section>
@@ -106,7 +100,7 @@
                     <figure>
                         <img src="/img/colombia/santuario.jpg" alt="picture-2">
                         <figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo ullam similique maiores quidem voluptatem inventore quae odit nulla distinctio?</p>
+                            <p>Las Lajas Sanctuary in southwest Colombia is renowned for its stunning architecture, for a series of legends involving the appearance of the Holy Virgin Mary, and for a mysterious mural of unknown origin.</p>
                         </figcaption>
                     </figure>
                  </section>
@@ -117,7 +111,7 @@
                     <figure>
                         <img src="/img/colombia/catedra.jpeg" alt="picture-3">
                         <figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo ullam similique maiores quidem voluptatem inventore quae odit nulla distinctio?</p>
+                            <p>Beautiful completely carved in Salt Cathedral is unique in its kind and presents visitors a majesty unparalleled. A monumental architectural masterpiece built by the miners' own hands and which became a beautiful temple.</p>
                         </figcaption>
                     </figure>
                  </section>
@@ -128,7 +122,7 @@
                     <figure>
                         <img src="/img/colombia/cristales.jpg" alt="picture-4">
                         <figcaption>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo ullam similique maiores quidem voluptatem inventore quae odit nulla distinctio?</p>
+                            <p>Caño Cristales in the Colombian National Park of La Macarena has been called the most beautiful river in the world, and the river than escaped from heaven, because of its incredible red colour. It is one of Colombia’s most unique and exciting tourist attractions</p>
                         </figcaption>
                     </figure>
                  </section>
@@ -145,25 +139,25 @@
                         <figure class="fest1">
                             <img src="/img/colombia/carnival-mask.png" alt="fest-1">
                             <figcaption>
-                                <h3>Lorem, ipsum.</h3>
-                                <h4>Lorem, ipsum dolor.</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
+                                <h3>BARRANQUILLA</h3>
+                                <h4>Carnival</h4>
+                                <p>The Carnival of Barranquilla is not only the second-largest carnival celebration in the world after the one in Rio de Janeiro. It is also the most prominent public and street celebration in Colombia.</p>
                             </figcaption>
                         </figure>
                         <figure class="fest2">
                             <img src="/img/colombia/mexican-hat.png" alt="fest-2">
                             <figcaption>
-                                <h3>Lorem, ipsum.</h3>
-                                <h4>Lorem, ipsum dolor.</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
+                                <h3>THE FLOWERS</h3>
+                                <h4>Festival</h4>
+                                <p>This parade gives silleteros (people who cultivate flowers and create beautiful artwork out of flowers to carry on their backs) a chance to display their amazing work to the public.</p>
                             </figcaption>
                         </figure>
                         <figure class="fest3">
                             <img src="/img/colombia/parade.png" alt="fest-3">
                             <figcaption>
-                                <h3>Lorem, ipsum.</h3>
-                                <h4>Lorem, ipsum dolor.</h4>
-                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, numquam.</p>
+                                <h3>BLACK AND WHITE'S</h3>
+                                <h4>Carnival</h4>
+                                <p>The festival originates during Spanish rule, when slaves were allowed to celebrate on January 5 and their masters joined them in their festivities by painting their faces black. </p>
                             </figcaption>
                         </figure>
                     </section>
@@ -192,7 +186,7 @@
                                 <img src="/img/colombia/arepas-colombianas.jpg" alt="food-1">
                                 <figcaption>
                                     <h4>Arepas</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aut doloremque vero laborum veritatis molestiae nihil voluptas. Saepe, culpa distinctio?</p>
+                                    <p>Arepas are mostly known as corn cakes made out of corn dough or precooked corn flour in a flat circular shape, similar to a pancake.</p>
                                 </figcaption>
                             </figure>
                         </aside>
@@ -201,7 +195,7 @@
                                 <img src="/img/colombia/bandejapaisa.jpg" alt="food-2">
                                 <figcaption>
                                     <h4>Bandeja Paisa</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aut doloremque vero laborum veritatis molestiae nihil voluptas. Saepe, culpa distinctio?</p>
+                                    <p>It’s one of the most traditional Colombian foods and it can be summed up as “a festival of meat on a Frisbee-sized plate.” In fact, the word bandeja in Spanish means platter, so you know you’re in for a lot of food.</p>
                                 </figcaption>
                             </figure>
                         </aside>
@@ -209,8 +203,8 @@
                             <figure>
                                 <img src="/img/colombia/ajiaco.jpg" alt="food-3">
                                 <figcaption>
-                                    <h4>Arepas</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aut doloremque vero laborum veritatis molestiae nihil voluptas. Saepe, culpa distinctio?</p>
+                                    <h4>Ajiaco</h4>
+                                    <p>Ajiaco is a unique Colombian dish, especially beloved in the city of Bogota. It's a hearty chicken soup made with potatoes and corn on the cob.</p>
                                 </figcaption>
                             </figure>
                         </aside>
@@ -220,39 +214,69 @@
             </section>
         </section>
         <section class="cright" id="cright">
-            <section class="form" id="form">
-                <article>
-                    <i class="fa-solid fa-envelope-open-text"></i>
-                </article>
-                <form action="#" method="post">
-                    <caption>blablabla</caption>
-                    <input type="text" id="fName" name="fName" placeholder="First Name">
-                    <input type="text" id="lName" name="lName" placeholder="Last Name">
-                    <input type="email" id="email" name="email" placeholder="Your email">
-                    <select name="country" id="country">
-                        <option value="" disabled selected>Select Your Country</option>
-                        <option value="col">Colombia</option>
-                        <option value="br">Brazil</option>
-                        <option value="kr">South Korea</option>
-                        <option value="usa">United States</option>
-                        <option value="ukraine">Ukraine</option>
-                        <option value="ger">Germany</option>
-                        <option value="can">Canada</option>
-                        <option value="ita">Italy</option>
-                        <option value="fr">France</option>
-                        <option value="rome">Rome</option>
-                    </select>
-                    <input type="number" name="age" id="age" placeholder="Age">
-                    <select name="profile" id="profile">
-                        <option value="" disabled selected>Select Your Profile</option>
-                        <option value="student">Student</option>
-                        <option value="company">Company</option>
-                        <option value="personal">Personal Use</option>
-                    </select>
-                    <label for="conditions">I Acknowledge That I Have Read And Understand The <a href="#">Terms</a> And <a href="">Conditions</a> </label>
-                    <input type="checkbox" id="conditions" name="conditions">
-                    <input type="submit" value="Subscribe!">
-                </form>
+            <section class="travel" id="travel">
+                <section>
+                    <article>
+                        <h1>How to</h1>
+                        <h2>Get to Colombia</h2>
+                    </article>
+                    <aside class="travcontent">
+                        <figure>
+                            <img src="/img/colombia/america.png" alt="travel-1">
+                            <figcaption>
+                                <h3>American Airlines that travel to Colombia</h3>
+                                <aside>
+                                    <h4>
+                                        AMERICAN
+                                    </h4>
+                                    <p>
+                                        Vancouver - Bogota
+                                    </p>
+                                </aside>
+                                <aside>
+                                    <h4>
+                                        DELTA
+                                    </h4>
+                                    <p>
+                                        Washington - Bogota
+                                    </p>
+                                </aside>
+                                <aside>
+                                    <h4>
+                                        AVIANCA
+                                    </h4>
+                                    <p>
+                                        Miami - Cartagena
+                                    </p>
+                                </aside>
+                                <aside>
+                                    <h4>
+                                        LATAM
+                                    </h4>
+                                    <p>
+                                        Lima (PE) - Cali
+                                    </p>
+                                </aside>
+                                <aside>
+                                    <h4>
+                                        COPA
+                                    </h4>
+                                    <p>
+                                        Mexico - Bucaramanga
+                                    </p>
+                                </aside>
+                                <aside>
+                                    <h4>
+                                        AIR CANADA
+                                    </h4>
+                                    <p>
+                                        Vancouver - Bogota
+                                    </p>
+                                </aside>
+                            </figcaption>
+                        </figure>
+                    </aside>
+                </section>   
             </section>
             <section class="faq" id="faq">
                 <article>
@@ -261,10 +285,10 @@
                     </h2>
                 </article>
                 <ul>
-                    <li><i class="fa-solid fa-q"></i><a href="#">question 1 <i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><i class="fa-solid fa-q"></i><a href="#">question 2 <i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><i class="fa-solid fa-q"></i><a href="#">question 3 <i class="fa-solid fa-arrow-right"></i></a></li>
-                    <li><i class="fa-solid fa-q"></i><a href="#">question 4 <i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><i class="fa-solid fa-q"></i><a href="#">Which languages are spoken in Colombia? <i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><i class="fa-solid fa-q"></i><a href="#">What currency is used in Colombia?<i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><i class="fa-solid fa-q"></i><a href="#">When is the best time to travel to Colombia?<i class="fa-solid fa-arrow-right"></i></a></li>
+                    <li><i class="fa-solid fa-q"></i><a href="#">Is Colombia a family-friendly destination?<i class="fa-solid fa-arrow-right"></i></a></li>
                 </ul>
                 <a href="#">Read more</a>
             </section>
