--- a/colombia.html
+++ b/colombia.html
@@ -22,7 +22,7 @@
             <i class="fa-solid fa-earth-americas"></i>
         </aside>
         <ul>
-            <li><a href="home.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="brazil.html">BRAZIL</a></li>
             <li><a href="colombia.html">COLOMBIA</a></li>
             <li><a href="korea.html">KOREA</a></li>
@@ -31,13 +31,13 @@
             <summary class="fa-solid fa-bars"></summary>
             <article>
                 <ul>
-                    <li><a href="#intro">Welcome</a></li>
-                    <li><a href="#summaryBrazil">About Brazil</a></li>
-                    <li><a href="#summaryColombia">About Colombia</a></li>
-                    <li><a href="#summaryKorea">About Korea</a></li>
+                    <li><a href="#place">Places</a></li>
+                    <li><a href="#festival">Festival</a></li>
+                    <li><a href="#food">Gastronomy</a></li>
+                    <li><a href="#travel">Travel</a></li>
                 </ul>
                 <ul>
-                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="brazil.html">BRAZIL</a></li>
                     <li><a href="colombia.html">COLOMBIA</a></li>
                     <li><a href="korea.html">KOREA</a></li>
